fix: adjust height of the section to improve layout on mobile devices

--- a/css/index.css
+++ b/css/index.css
@@ -953,8 +953,7 @@
     color: #f1f1f1;
     font-family: Arial, sans-serif;
     text-align: center;
-    height: 80  vh;
-
+    height: 75vh;
     position: relative;
   }
 
